--- a/src/components/SelectList/style.css
+++ b/src/components/SelectList/style.css
@@ -1,22 +1,34 @@
-.h-side-menu {
-	font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-weight: 700;
-}
-
 .h-select-list-container {
 	width: 150px;
-	background-color: gold;
+	display: flex;
+	flex-direction: column;
 }
 
 .h-select-list-container input {
-	width: 150px;
+	padding: 4px 2px;
+	border: solid 1px #2E1A47;
 }
 
-
 .h-options-list {
-	width: 150px;
-	background-color: red;
-	list-style-type: none;
-	padding-inline-start: 0px;
-	padding: 1px 2px;
+	display: flex;
+	flex-direction: column;
+	max-height: 200px;
+	border-left: solid 1px #2E1A47;
+	border-right: solid 1px #2E1A47;
+	border-bottom: solid 1px #2E1A47;
+}
+
+.h-option {
+	padding: 4px 2px;
+}
+
+.h-option:hover {
+	background-color: #541b5410;
+	cursor: pointer;
+}
+
+.h-option.selected {
+	background-color: #541b54cf;
+	cursor: pointer;
+	color: white;
 }
